# AlgebraCryptographyMethodsLab2

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
AlgLib/: AlgLib.cpp  AlgLib.h  CMakeLists.txt  ElGamal.cpp  ElGamal.h
